tests/files/type_checker_tests/should_fail/011.cmdr
//Should fail when doing pre decrement on something that isn't a float or int
a = true;
x = --a;